--- a/wabpack+React/try-react-webpack/src/index.scss
+++ b/wabpack+React/try-react-webpack/src/index.scss
@@ -1,5 +1,13 @@
+html{
+  height: 100%;
+}
 body {
+  height: 100%;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  position: relative;
+  background:url(../public/asset/bg1.jpg) no-repeat{
+    size:100% 100%;
+  }
 }
