--- a/wabpack+React/try-react-webpack/src/component/Login/Login.scss
+++ b/wabpack+React/try-react-webpack/src/component/Login/Login.scss
@@ -21,3 +21,9 @@
     z-index: 13;
     border-radius: 5px;
 }
+.validMessage{
+  height: 30px;
+  color: brown;
+  font-size: 12px;
+  text-align: left;
+}
