--- a/wabpack+React/try-react-webpack/src/App.scss
+++ b/wabpack+React/try-react-webpack/src/App.scss
@@ -1,5 +1,9 @@
 .App {
-  text-align: center;
   width: 100%;
   height: 100%;
+  .appContent{
+    padding: 20px;
+    display: flex;
+    flex-direction: column
+  }
 }
