--- a/wabpack+React/try-react-webpack/src/component/AppIcon/AppIcon.scss
+++ b/wabpack+React/try-react-webpack/src/component/AppIcon/AppIcon.scss
@@ -1,3 +1,14 @@
-.container {
-  
+.appIconImg{
+    width: 50px;
+    height: 50px;
+    border-radius: 5px;
+}
+.appDetial{
+    text-align: center;
+    color: white;
+}
+.iconOutside{
+    width: 50px;
+    height: 70px;
+    margin-bottom: 5px
 }
